[package]
edition = "2021"
name = "ahqstore_cli_rs"
version = "0.7.0"
description = "AHQ Store CLI"
repository = "https://github.com/ahqstore/cli"
homepage = "https://github.com/ahqstore/cli"
license = "MIT"
readme = "README.md"

[lib]
name = "ahqstore_cli_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "ahqstore"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2", default-features = false, features = [
  "napi4",
], optional = true }
napi-derive = { version = "2", optional = true }
inquire = { version = "0", features = ["editor"] }
chalk_rs = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahqstore-types = { version = "3", features = ["apps_repo"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = [
  "rayon",
  "png",
] }
rand = "0.8"

[target.'cfg(unix)'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[build-dependencies]
napi-build = { version = "2", optional = true }

[profile.release]
lto = true
strip = "symbols"

[features]
node = ["dep:napi", "dep:napi-build", "dep:napi-derive"]
