[package]
edition = "2021"
name = "ahqstore_cli_rs"
version = "0.9.1"
description = "AHQ Store CLI"
repository = "https://github.com/ahqstore/cli"
homepage = "https://github.com/ahqstore/cli"
license = "MIT"
readme = "README.md"

[lib]
name = "ahqstore_cli_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "ahqstore"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
inquire = { version = "0", features = ["editor"] }
chalk_rs = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahqstore-types = { version = "3", features = ["apps_repo"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = [
  "rayon",
  "png",
] }
rand = "0.9"

[target.'cfg(unix)'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[profile.release]
lto = true
strip = "symbols"
