[package]
edition = "2021"
name = "ahqstore_cli_rs"
version = "0.16.0-alpha.1"
description = "AHQ Store Developers' CLI"
repository = "https://github.com/ahqstore/cli"
homepage = "https://github.com/ahqstore/cli"
license = "MIT"
readme = "README.md"

[lib]
name = "ahqstore_cli_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "ahqstore"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
ahqstore-types = { version = "^4", features = ["apps_repo"] }
image = { version = "^0.25", default-features = false, features = ["png"] }
rand = "^0.10"
semver = "^1"
sigstore = { version = "^0.13", default-features = false, features = [
  "rekor",
  "fulcio",
  "rustls-tls",
  "bundle",
] }
aws-lc-rs = { version = "^1", features = ["prebuilt-nasm"] }
dialoguer = "^0.12"
indicatif = "^0.18"
console = "^0.16"
rustls = { version = "^0.23", default-features = false, features = ["aws_lc_rs"] }
reqwest = "^0.13"
tokio = { version = "^1", features = ["rt", "time", "macros"] }

[target.'cfg(target_env="musl")'.dependencies]
mimalloc = "^0.1"

[profile.release]
lto = "fat"
strip = true
opt-level = "z"
codegen-units = 1
