[package]
name = "ahqstore_cli_rs"
version = "0.1.5"
edition = "2021"
description = "AHQ Store CLI"
repository = "https://github.com/ahqstore/cli"
homepage = "https://github.com/ahqstore/cli"
license = "MIT"
exclude = ["dist/**", ".ahqstore/**", "finalize.js", "tslink.toml"]
readme = "README.md"

[lib]
name = "ahqstore_cli_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "ahqstore"
path = "src/main.rs"

[dependencies]
node-bindgen = { version = "6.0.1", optional = true }
tslink = { version = "0.1.0", optional = true }
inquire = { version = "0.7.0", features = ["editor"] }
chalk_rs = "1.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
ahqstore-types = "1.4.0-rc6"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
sha2 = "0.10.8"
base64 = "0.21.5"
image = "0.24.7"
rand = "0.8.5"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.62", features = ["vendored"] }

[build-dependencies]
node-bindgen = { version = "6.0.1", default-features = false, features = [
  "build",
], optional = true }

[features]
node = ["dep:node-bindgen", "dep:tslink"]
