[package]
name = "ahqstore_cli_rs"
version = "0.2.7"
edition = "2021"
description = "AHQ Store CLI"
repository = "https://github.com/ahqstore/cli"
homepage = "https://github.com/ahqstore/cli"
license = "MIT"
exclude = ["dist/**", ".ahqstore/**", "finalize.js", "tslink.toml"]
readme = "README.md"

[lib]
name = "ahqstore_cli_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "ahqstore"
path = "src/main.rs"

[dependencies]
node-bindgen = { version = "6.0.1", optional = true }
tslink = { version = "0.1.3", optional = true }
inquire = { version = "0.7.4", features = ["editor"] }
chalk_rs = "1.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
ahqstore-types = "1.4.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10.8"
base64 = "0.22.0"
image = "0.25"
rand = "0.8.5"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }

[build-dependencies]
node-bindgen = { version = "6.0.1", default-features = false, features = [
  "build",
], optional = true }

[features]
node = ["dep:node-bindgen", "dep:tslink"]
